--- a/app/src/main/res/layout/layout_transaction_item_cell.xml
+++ b/app/src/main/res/layout/layout_transaction_item_cell.xml
@@ -22,9 +22,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_margin="10dp"
-
-        />
+                android:layout_margin="10dp"/>
 
         <TextView
                 android:id="@+id/transaction_title"
@@ -33,12 +31,24 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:text="@{viewModel.title}"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toStartOf="@+id/price"
                 android:layout_marginStart="5dp"
                 android:textColor="#4a4a4a"
-                tools:text="Shopping"
+                tools:text="Title"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/transaction_description"
+                app:layout_constraintStart_toEndOf="@+id/iv_transaction_icon"
+                android:layout_width="0dp"
+                android:text="@{viewModel.description}"
+                app:layout_constraintTop_toBottomOf="@+id/guideline"
+                app:layout_constraintEnd_toStartOf="@+id/price"
+                android:layout_marginStart="5dp"
+                android:textSize="14sp"
+                android:textColor="#cacaca"
+                tools:text="Description"
                 android:layout_height="wrap_content"/>
 
         <TextView
@@ -48,13 +58,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="£4.94"
                 android:textStyle="bold"
-                android:textSize="18sp"
                 android:layout_marginEnd="5dp"
                 android:text="@{viewModel.price}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:textColor="@{viewModel.priceColor}"
                 android:layout_height="wrap_content"/>
 
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.5"/>
 
         <TextView
                 android:id="@+id/date"
